[package]
name = "rscx-mdx"
version = "0.1.7"
edition = "2021"
authors = ["Antonio Pitasi"]
license = "MIT"
repository = "https://github.com/pitasi/rscx-mdx"
description = "MDX support for RSCx"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
async-trait = "0.1.73"
comrak = "0.18.0"
frontmatter = "0.4.0"
html_parser_rscx = { version = "0.7.1" }
rscx = "0.1.14"

[dev-dependencies]
tokio = "1.32.0"
